# CloneMe

./: .env.example  README.md  bot.py  bot_telegram.py  my_agent_data.db  pyproject.toml  runner.py  teste.py
.old/: main.py  revisor_de_perfil.py  sessions.db
.old/ManagerAgent/: agent.py  initial_state.py
.old/agentes/: gerarpostassunto.py  gerarpostdescricao.py
.old/busca_instagram/: agent.py
.old/tools/: instagram.py  lerimg.py
busca_instagram/: agent.py
gerarpost/: agent.py
manager_agent/: agent.py
manager_agent/shared/: constants.py
manager_agent/sub_agents/agente_especialista_em_legendas/: agent.py
manager_agent/sub_agents/agente_especialista_em_legendas/sub_agentes_legenda/: criador_de_legenda.py  revisor_de_legenda.py
manager_agent/sub_agents/analisador_de_perfil/: agent.py
manager_agent/sub_agents/analisador_de_perfil/sub_agents_analisador/: analisador_em_si.old.py  analisador_em_si.py  leitor_de_dados.py  resumidor_do_perfil.py  revisor_de_perfil.py
manager_agent/sub_agents/criador_de_conteudo/: agent.py
manager_agent/sub_agents/criador_de_conteudo/sub_agents_criador/: buscador_internet.py  criador_post.py  revisor_post.py
manager_agent/sub_agents/criador_de_legendas_para_imagens/: agent.py
manager_agent/tools/: analisar_estilo_imgs.py  buscar_dados_perfil.py  descrever_uma_img.py  lerperfil.py  state_schema.py
manager_agent/tools/posts/173775906/: posts.txt
tools/: parametrospost.py
