[project]
name = "cloneme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.21.0",
    "aiograpi>=0.0.4",
    "google-adk",
    "google-genai>=1.22.0",
    "instaloader>=4.14.2",
    "openai>=1.93.0",
    "pillow>=8.1.1",
    "python-dotenv",
    "python-telegram-bot>=22.1",
]
